[package]
name = "automator"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
map-macro = "0.3.0"
octocrab = "0.44.1"
semver = "1.0.26"
serde = "1.0.219"
serde_json = "1.0.141"
tracing = "0.1.41"
url = "2.5.4"

[dependencies.autolib]
path = "../autolib"

[dependencies.clap]
version = "4.5.41"
features = ["derive"]

[dependencies.tokio]
version = "1.46.1"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter"]
