[package]
name = "automator"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
map-macro = "0.3.0"
octocrab = "0.48.0"
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1.0.145"
tracing = "0.1.41"
url = "2.5.7"

[dependencies.autolib]
path = "../autolib"

[dependencies.clap]
version = "4.5.53"
features = ["derive"]

[dependencies.tokio]
version = "1.48.0"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.20"
features = ["env-filter"]
