[package]
name = "automator"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
map-macro = "0.3.0"
octocrab = "0.49.5"
semver = "1.0.27"
serde = "1.0.228"
serde_json = "1.0.149"
tracing = "0.1.44"
url = "2.5.7"

[dependencies.autolib]
path = "../autolib"

[dependencies.clap]
version = "4.5.54"
features = ["derive"]

[dependencies.tokio]
version = "1.49.0"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.22"
features = ["env-filter"]
