[package]
name = "release-operator"
version = "0.3.1"
edition = "2021"
publish = false


[dependencies]
anyhow = "1.0.99"
cargo_metadata = "0.22.0"
cmd_lib = "2.0.0"
env_logger = "0.11.8"
log = "0.4.28"
secstr = "0.5.0"
semver = "1.0.26"
serde_json = "1.0.142"
thiserror = "2.0.16"

[dependencies.autolib]
path = "../autolib"

[dependencies.reqwest]
version = "0.12.23"
features = ["blocking"]

[dependencies.clap]
version = "4.5.47"
features = ["std", "derive", "env"]
default-features = false

[dependencies.serde]
version = "1.0.219"
features = ["derive"]
