[package]
name = "release-operator"
version = "0.3.1"
edition = "2021"
publish = false


[dependencies]
anyhow = "1.0.101"
cargo_metadata = "0.23.1"
cmd_lib = "2.0.0"
env_logger = "0.11.8"
log = "0.4.29"
secstr = "0.5.0"
semver = "1.0.27"
serde_json = "1.0.149"
thiserror = "2.0.18"

[dependencies.autolib]
path = "../autolib"

[dependencies.reqwest]
version = "0.13.2"
features = ["blocking"]

[dependencies.clap]
version = "4.5.57"
features = ["std", "derive", "env"]
default-features = false

[dependencies.serde]
version = "1.0.228"
features = ["derive"]
